[package]
name = "wispmark"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.42", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
regex = "1.11"
once_cell = "1.20"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"